Fix double scrollbar when lot of entities in one module

--- a/structure/template/public/css/AdminLteV2/AdminLTE.css
+++ b/structure/template/public/css/AdminLteV2/AdminLTE.css
@@ -28,8 +28,8 @@ body {
 .wrapper {
   height: 100%;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: auto;
+  /*overflow-x: hidden;
+  overflow-y: auto;*/
 }
 .wrapper:before,
 .wrapper:after {
